src/objects/CC_Application_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Capacity_Review_Action_Comments__c</fullName>
        <label>Capacity Review Action Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Review_Action__c</fullName>
        <label>Capacity Review Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reserve Capacity</fullName>
                </value>
                <value>
                    <fullName>Add to Waitlist</fullName>
                </value>
                <value>
                    <fullName>Free Capacity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity_Review_Comments__c</fullName>
        <label>Capacity Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currently_Getting_Program_Name__c</fullName>
        <formula>Service__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currently Getting Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrolled Program</label>
        <referenceTo>CC_Enrolled_Program__c</referenceTo>
        <relationshipLabel>Application Details</relationshipLabel>
        <relationshipName>Application_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Getting_the_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Getting the Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Meet_Waiver_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Meet Waiver Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meet_For_Another_Waiver_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meet For Another Waiver Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Program_Suggestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Program Suggestion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CC_Application_Detail__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Waiver Programs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CC_Application_Detail__c</referenceTo>
        <relationshipLabel>Suggested Programs</relationshipLabel>
        <relationshipName>Child_Program_Suggestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Program_Name__c</fullName>
        <description>For Waitlist Record Type this stores Waitlisted Other Program Name
For Service Detail Record Type this stores Other Getting Program Name</description>
        <label>Other Program Currently Getting/Waitlist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Service_Name__c</fullName>
        <label>Other Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Date_Time__c</fullName>
        <description>Date and time to consider for application processing.</description>
        <label>Processing Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Detail</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CC_Program_Service__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Program Detail</value>
            </filterItems>
            <filterItems>
                <field>CC_Program_Service__c.Master_Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.Waiting_List_Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CC_Program_Service__c</referenceTo>
        <relationshipLabel>Program Detail Selections</relationshipLabel>
        <relationshipName>Application_Program_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Application__c</fullName>
        <label>Related Application</label>
        <referenceTo>CC_Application__c</referenceTo>
        <relationshipLabel>Application Details</relationshipLabel>
        <relationshipName>Application_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Select_Time_Zone__c</fullName>
        <label>Select Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>Arizona Time</fullName>
                </value>
                <value>
                    <fullName>GMT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CC_Program_Service__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Service</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CC_Program_Service__c</referenceTo>
        <relationshipLabel>Application Details (Related To Service)</relationshipLabel>
        <relationshipName>Application_Details_Serv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capacity Review Pending</fullName>
                </value>
                <value>
                    <fullName>Closed-Doesn&apos;t Meet Targeting Criteria</fullName>
                </value>
                <value>
                    <fullName>Waiver Review</fullName>
                </value>
                <value>
                    <fullName>Capacity Reserved</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Remove Wait-list</fullName>
                </value>
                <value>
                    <fullName>Closed-Disenrolled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeting_Comments__c</fullName>
        <description>Comments to Application Reviewer and Capacity Reviewer.</description>
        <label>Targeting Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Urgency_Comment__c</fullName>
        <label>Urgency Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Urgency_Request_Date__c</fullName>
        <label>Urgency Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visited_Pages__c</fullName>
        <label>Visited Pages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Living Situation</fullName>
                </value>
                <value>
                    <fullName>Document Review</fullName>
                </value>
                <value>
                    <fullName>Targeting Criteria</fullName>
                </value>
                <value>
                    <fullName>Urgency of Need</fullName>
                </value>
                <value>
                    <fullName>Manage Allotment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_List_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>All AD related to a Program which is waitlisted</description>
        <label>Waiting List Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CC_Program_Service__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CC_Program_Service__c</referenceTo>
        <relationshipLabel>Application Details(Related to Program)</relationshipLabel>
        <relationshipName>Application_Details_Prog</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000000}</displayFormat>
        <label>Application Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Details</pluralLabel>
    <recordTypes>
        <fullName>Service_Type</fullName>
        <active>true</active>
        <label>Service Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waitlist_Type</fullName>
        <active>true</active>
        <label>Waitlist Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waiver_Programs</fullName>
        <active>true</active>
        <label>Waiver Programs</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Program_Enrollment_Check</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISBLANK(Program_Detail__c),false, Program_Detail__r.Master_Program__c &lt;&gt;  Waiting_List_Program__c)</errorConditionFormula>
        <errorMessage>Program Category must be same as Program suggested</errorMessage>
    </validationRules>
</CustomObject>